Melhora a acessibilidade e a usabilidade do sistema, traduzindo textos para português e adicionando tooltips aos botões de ação.

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id article %>">
   <p>
-    <strong>Title:</strong>
+    <strong>Titulo:</strong>
     <%= article.title %>
   </p>
 
@@ -10,7 +10,7 @@
   </p>
 
   <p>
-    <strong>User:</strong>
+    <strong>Usuário:</strong>
     <%= article.user_id %>
   </p>
 
