--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,13 +1,12 @@
-<% content_for :title, "New article" %>
+<% content_for :title, "Novo Artigo" %>
 
-<h1>New article</h1>
+<h1>Novo Artigo</h1>
 
 <%= render "form", article: @article %>
 
 <br>
 
 <div>
-  <%# Verifica se o usuário é admin para decidir para onde o link "Voltar" aponta %>
   <% if current_user.admin? %>
     <%= link_to "Voltar ao Dashboard", admin_dashboard_path, class: "btn btn-secondary" %>
   <% else %>
