--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
     <div class="container">
       <a class="navbar-brand fs-4" href="<%= root_path %>">
-        <%= image_tag "logo.jpg", alt: "Logo Sistema de Artigos", style: "height: 40px;" %>
+        <%= image_tag "logo.jpg", alt: "Logo Sistemas de Informação", style: "height: 60px;" %>
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
