--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,31 @@
-<h2>Reenviar instruções de confirmação</h2>
+<div class="row justify-content-center mt-5">
+  <div class="col-lg-6">
+    <div class="card shadow-sm">
+      <div class="card-body p-5">
+        <h2 class="card-title text-center mb-4">Reenviar instruções de confirmação</h2>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+          <div class="mb-3">
+            <%= f.label :email, class: "form-label" %><br />
+            <%= f.email_field :email, 
+                  autofocus: true, 
+                  autocomplete: "email", 
+                  value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), 
+                  class: "form-control" %>
+          </div>
+
+          <div class="d-grid gap-2 mt-4">
+            <%= f.submit "Reenviar instruções de confirmação", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+
+        <div class="text-center mt-4">
+          <%= render "devise/shared/links" %>
+        </div>
+
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Reenviar instruções de confirmação" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
