--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,37 @@
-<h2>Alterar sua senha</h2>
+<div class="row justify-content-center mt-5">
+  <div class="col-lg-6">
+    <div class="card shadow-sm">
+      <div class="card-body p-5">
+        <h2 class="card-title text-center mb-4">Alterar sua senha</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "Nova senha" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> caracteres mínimo)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+          <div class="mb-3">
+            <%= f.label :password, "Nova senha", class: "form-label" %>
+            <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
+            <% if @minimum_password_length %>
+              <div id="passwordHelp" class="form-text">
+                (<%= @minimum_password_length %> caracteres no mínimo)
+              </div>
+            <% end %>
+          </div>
+
+          <div class="mb-3">
+            <%= f.label :password_confirmation, "Confirmar nova senha", class: "form-label" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+          </div>
+
+          <div class="d-grid gap-2 mt-4">
+            <%= f.submit "Alterar minha senha", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+
+        <div class="text-center mt-4">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirmar nova senha" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Alterar minha senha" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
