--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="row justify-content-center">
   <div class="col-md-8">
     <%# Card Principal para Edição do Perfil %>
-    <div class="card mt-4">
+    <div class="card mt-4 shadow-sm">
       <div class="card-header">
         <h2>Editar Perfil</h2>
       </div>
-      <div class="card-body">
+      <div class="card-body p-4">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -40,7 +40,7 @@
             <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
           </div>
 
-          <div class="actions">
+          <div class="d-grid gap-2">
             <%= f.submit "Atualizar", class: "btn btn-primary" %>
           </div>
         <% end %>
@@ -58,8 +58,8 @@
       </div>
     </div>
     
-    <div class="mt-3">
-      <%= link_to "Voltar", :back %>
+    <div class="mt-4">
+      <%= link_to "Voltar", :back, class: "btn btn-outline-secondary" %>
     </div>
   </div>
 </div>
