--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
-<div class="row justify-content-center">
-  <div class="col-md-6">
-    <div class="card mt-5">
+<div class="row justify-content-center mt-5">
+  <div class="col-lg-6">
+    <div class="card shadow-sm">
       <div class="card-header">
-        <h2>Cadastrar</h2>
+        <h2 class="text-center">Cadastrar</h2>
       </div>
-      <div class="card-body">
+      <div class="card-body p-5">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -14,7 +14,7 @@
           </div>
 
           <div class="mb-3">
-            <%= f.label :senha, class: "form-label" %>
+            <%= f.label :password, class: "form-label" %>
             <% if @minimum_password_length %>
               <em class="form-text text-muted">(<%= @minimum_password_length %> caracteres no mínimo)</em>
             <% end %><br />
@@ -26,12 +26,12 @@
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
           </div>
 
-          <div class="actions">
+          <div class="d-grid gap-2 mt-4">
             <%= f.submit "Cadastrar", class: "btn btn-primary" %>
           </div>
         <% end %>
       </div>
-      <div class="card-footer">
+      <div class="card-footer text-center">
         <%= render "devise/shared/links" %>
       </div>
     </div>
